feat: :sparkles: add cron job and order status
